RESOLVED FIXED54419
WebKit2: View not updated completely when coming back from a cached back/forward navigation
https://bugs.webkit.org/show_bug.cgi?id=54419
Summary WebKit2: View not updated completely when coming back from a cached back/forw...
Sam Weinig
Reported 2011-02-14 15:57:39 PST
In WebKit2, the view is not updated completely when coming back from a cached back/forward navigation. Steps to repro: 1. Navigate to <http://en.wikipedia.org/wiki/WebKit> 2. Scroll the page all the way to the bottom 3. Click the link to The WebKit Open Source Project 4. Go back
Attachments
Patch (1.70 KB, patch)
2011-02-14 16:01 PST, Sam Weinig
andersca: review+
Sam Weinig
Comment 1 2011-02-14 15:58:01 PST
Sam Weinig
Comment 2 2011-02-14 16:01:03 PST
Sam Weinig
Comment 3 2011-02-14 16:03:29 PST
Landed in 78523.
Note You need to log in before you can comment on or make changes to this bug.