WebKit2: View not updated completely when coming back from a cached back/forward navigation <rdar://problem/8787264> https://bugs.webkit.org/show_bug.cgi?id=54419

Reviewed by Anders Carlsson.

* WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
(WebKit::WebFrameLoaderClient::restoreViewState): Invalidate the entire page
when completing a restore from the back/forward cache.



Canonical link: https://commits.webkit.org/68522@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78523 268f45cc-cd09-0410-ab3c-d52691b4dbfc